...

    lazy var deleteButton: InsetButton = {
        let deleteButton = InsetButton()
        deleteButton.setImage(#imageLiteral(resourceName: "icon_delete"), for: .normal)
        deleteButton.addTarget(self, action: #selector(didPressDelete), for: .touchUpInside)
        deleteButton.contentEdgeInsets = UIConstants.layout.toolbarButtonInsets
        deleteButton.accessibilityIdentifier = "URLBar.deleteButton"
        deleteButton.isEnabled = false
        return deleteButton
    }()

    lazy var contextMenuButton: InsetButton = {
        let contextMenuButton = InsetButton()
...
