...
"Browser.reloadLabel" = "Reload";

/* Accessibility label for the settings button */
"Browser.settingsLabel" = "Settings";

/* Accessibility label for the share button */
"Browser.shareLabel" = "Share";

/* Accessibility label for the stop button */
"Browser.stopLabel" = "Stop";

/* Label to display in the Discoverability overlay for keyboard shortcuts */
"browserShortcutDescription.selectLocationBar" = "Select Location Bar";
...
"contextMenu.saveImageTitle" = "Save Image";

/* Text for the context menu when a user wants to share a link after long pressing it. */
"contextMenu.shareLinkTitle" = "Share Link";

/* Label on button to complete edits */
"Done" = "Done";

/* Label on button to allow edits */
"Edit" = "Edit";

/* Button label to reload the error page */
"Error.tryAgainButton" = "Try again";
...
"Open.Cancel" = "Cancel";

/* Label in share alert to open the URL in Firefox */
"Open.Firefox" = "Firefox (Private Browsing)";

/* Label in share alert to open the full system share menu */
"Open.More" = "More";

/* Label in share alert to open the URL in Safari */
"Open.Safari" = "Safari";

/* Description for dialog used for requesting a user to enable access to Photos. */
"photosPermission.description" = "This lets you save images to your Camera Roll";
...
"URL.cancelLabel" = "Cancel";

/* Text for the URL context menu when a user long presses on the URL bar with clipboard contents. */
"URL.contextMenu" = "Paste & Go";

/* Erase button in the URL bar */
"URL.eraseButtonLabel" = "ERASE";

/* Message shown after pressing the Erase button */
"URL.eraseMessageLabel" = "Browsing history cleared";

/* Label displayed for find in page button when typing in the URL Bar. %@ is any text the user has typed into the URL bar that they want to find on the current page. */
"URL.findOnPageLabel" = "Find in page: %@";
...
